correction mobile grid

--- a/src/scss/list.scss
+++ b/src/scss/list.scss
@@ -7,3 +7,16 @@ $step: 360deg / $lenght;
             background: hsl($step * $index, 60%, 60%);
         }
     }
+/*
+body {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(100px, 1fr));
+  grid-gap: 5px;
+  grid-auto-rows: 100px;
+
+  @media (min-width: 1400px) {
+    grid-template-columns: repeat(18, 1fr);
+    grid-template-rows: repeat(7, 1fr);
+  }
+}
+*/
